.provarCaches/00D5f000005vwGkEAI/objects/rstk__gljed__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_gljed</customHelpPage>
    <description>gljed__c</description>
    <fields>
        <fullName>rstk__formula_iscredit__c</fullName>
        <formula>ISPICKVAL(rstk__gljed_drcr__c , &apos;Credit&apos;) || ISPICKVAL(rstk__gljed_drcr__c , &apos;Both&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Is Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__formula_isdebit__c</fullName>
        <formula>ISPICKVAL(rstk__gljed_drcr__c , &apos;Debit&apos;) || ISPICKVAL(rstk__gljed_drcr__c , &apos;Both&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Is Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__gljed_gljeh__r.Name &amp; &apos;_&apos; &amp;  TEXT(rstk__gljed_drcr__c) &amp; &apos;_&apos; &amp;  rstk__gljed_mfgacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total amount (value) being transacted with this Detail record.</inlineHelpText>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When a Salesforce Case is associated with a Sales Order, that Case Number will be written here for all Sales Order related transactions.</inlineHelpText>
        <label>Salesforce Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>General Journal Details</relationshipLabel>
        <relationshipName>gljeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_desc__c</fullName>
        <inlineHelpText>The transaction &quot;type&quot; that generated this record. Typically it matches the Transaction ID on the Inventory Cost Transaction triggering the add of this record. When not triggered from an Inventory Cost Transaction, it is set to a meaningful description.</inlineHelpText>
        <label>Line Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_dimval1__c</fullName>
        <inlineHelpText>This is the Dimension1 value defined for this transaction type.</inlineHelpText>
        <label>Dimension1 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_dimval2__c</fullName>
        <inlineHelpText>This is the Dimension2 value defined for this transaction type.</inlineHelpText>
        <label>Dimension2 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_dimval3__c</fullName>
        <inlineHelpText>This is the Dimension3 value defined for this transaction type.</inlineHelpText>
        <label>Dimension3 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Division in which the transaction occurred that trigger this detail record to be added.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>General Journal Details</relationshipLabel>
        <relationshipName>gljeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_drcr__c</fullName>
        <inlineHelpText>Identifies this record as being either a Credit or a Debit.</inlineHelpText>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__gljed_gljeh__c</fullName>
        <inlineHelpText>The Journal &quot;Header&quot; that this &quot;Detail&quot; record is associated with.</inlineHelpText>
        <label>Journal Header</label>
        <referenceTo>rstk__gljeh__c</referenceTo>
        <relationshipLabel>General Journal Details</relationshipLabel>
        <relationshipName>gljeds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_linetype__c</fullName>
        <inlineHelpText>Used by FinancialForce only.  Valid values are &apos;G&apos; and &apos;P&apos;.</inlineHelpText>
        <label>Line Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_mfgacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sub Ledger Account (aka Mfg Account) that is being debited or credited with this transaction.  The given Sub Ledger Account maps directly to the GL Account defined on the Sub Ledger Account record specified.</inlineHelpText>
        <label>Mfg Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>General Journal Details</relationshipLabel>
        <relationshipName>gljeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When this detail record is generated from an Inventory Cost Transaction, Project is set to the Project from said transaction, otherwise it is set to blank.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>General Journal Details</relationshipLabel>
        <relationshipName>gljeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_sfproduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For Sales Order related transactions, this is the Rootstock Product for which this transaction was performed.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>General Journal Details</relationshipLabel>
        <relationshipName>gljeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_soamorttxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>gljed_soamorttxn__c</description>
        <label>Sales Order Line Amortization Txns</label>
        <referenceTo>rstk__soamorttxn__c</referenceTo>
        <relationshipLabel>General Journal Details</relationshipLabel>
        <relationshipName>General_Journal_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_summary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Export Summary</label>
        <referenceTo>rstk__sytxnexpdtl__c</referenceTo>
        <relationshipLabel>General Journal Details</relationshipLabel>
        <relationshipName>gljeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_sytxncst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Cost Transaction record ID that triggered the add of this record.</inlineHelpText>
        <label>Cost Transaction</label>
        <referenceTo>rstk__sytxncst__c</referenceTo>
        <relationshipLabel>General Journal Details</relationshipLabel>
        <relationshipName>gljeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_txndate__c</fullName>
        <inlineHelpText>The date of the Inventory Cost Transaction record ID that triggered the add of this record.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__gljed_xrefacct__c</fullName>
        <inlineHelpText>The corresponding General Ledger Account specified on the Sub Ledger Account (aka Mfg Account) used for this transaction.</inlineHelpText>
        <label>Cross Reference GL Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>General Journal Detail</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__gljed_gljeh__c</columns>
        <columns>rstk__gljed_desc__c</columns>
        <columns>rstk__gljed_drcr__c</columns>
        <columns>rstk__gljed_linetype__c</columns>
        <columns>rstk__gljed_sytxncst__c</columns>
        <columns>rstk__gljed_txndate__c</columns>
        <columns>rstk__gljed_mfgacct__c</columns>
        <columns>rstk__gljed_xrefacct__c</columns>
        <columns>rstk__gljed_amount__c</columns>
        <columns>rstk__gljed_summary__c</columns>
        <columns>rstk__gljed_sfproduct__c</columns>
        <columns>rstk__gljed_pjproj__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Journal Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>